# app/public/swagger.json
@@ -197,7 +197,7 @@
           }
         },
         "responses": {
-          "201": {
+          "200": {
             "description": "OK"
           }
         }
@@ -255,7 +255,7 @@
           }
         },
         "responses": {
-          "201": {
+          "200": {
             "description": "OK"
           }
         }
@@ -277,7 +277,7 @@
           }
         ],
         "responses": {
-          "201": {
+          "200": {
             "description": "OK"
           }
         }
